kubernets/namespace.yaml
apiVersion: v1  
kind: Namespace
metadata:
  name: student
  labels:
    name: test
