kubernets/appsev.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-service
  namespace: student
spec:
  #type: NodePort
  ports:
  - port: 8080
    targetPort: 8080
    # nodePort: 31000
  selector:
    app: studentapp
