kubernets/databaseservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
  namespace: student
spec:
  selector:
    app: mongod
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
