kubernets/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  namespace: student
spec:
  rules:
  - host: student.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: myapp-service
            port: 
              number: 8080
